--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,14 @@ on:
   push:
     branches:
       - 'pack/**'
-      
+            
+env:
+    PRODUCT_NAME: "JenkinsTest"
+    XCWORKSPACE_NAME: "JenkinsTest"
+    PROJSCHEME_NAME: "JenkinsTest"
+    ARCHIVE_NAME: "JenkinsTest"
+    PROVISIONING_PROFILE_NAME: "${{ secrets.PROVISIONING_PROFILE_BASE64 }}"
+    
 jobs:
   build:
     runs-on: macos-latest
@@ -21,10 +28,10 @@ jobs:
 
       - name: Install the provisioning profile
         run: |
-      
+
             PP_PATH=$RUNNER_TEMP/0b012feb-aea9-4e90-b172-39986cb0f0f0.mobileprovision
-            
-            echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode --output $PP_PATH
+
+            echo -n "$PROVISIONING_PROFILE_NAME" | base64 --decode --output $PP_PATH
             mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
             cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
@@ -33,15 +40,16 @@ jobs:
           /usr/local/bin/pod install
 
       - name: Build resolve Swift dependencies
-        run: xcodebuild -resolvePackageDependencies -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -configuration Release
+        run: xcodebuild -resolvePackageDependencies -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -configuration Release
         
       - name: Archive
-        run: xcodebuild archive -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -archivePath JenkinsTest.xcarchive
+        run: xcodebuild archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -archivePath $ARCHIVE_NAME.xcarchive
 
       - name: Export IPA
         run: |
-          xcodebuild -exportArchive -archivePath JenkinsTest.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath "~/Downloads/JenkinsTest" PROVISIONING_PROFILE=${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+          xcodebuild -exportArchive -archivePath $ARCHIVE_NAME.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath "~/Downloads/$PROJSCHEME_NAME"
+#          PROVISIONING_PROFILE=${{ secrets.PROVISIONING_PROFILE_BASE64 }}
 
       - name: Upload to App Store
         run: |
-            xcrun altool --upload-app -f "~/Downloads/JenkinsTest/JenkinsTest.ipa" -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
+            xcrun altool --upload-app -f "~/Downloads/$PROJSCHEME_NAME/$PRODUCT_NAME.ipa" -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
