--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,32 +20,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-#      - name: Install Apple Certificate
-#        uses: apple-actions/import-codesign-certs@v1
-#        with:
-#            p12-file-base64: ${{ secrets.TRUSTY_CAR }}
-#            p12-password: ${{ secrets.TRUSTY_CAR_PSW }}
-#
-#      - name: Install the provisioning profile
-#        run: |
-#
-#            PP_PATH=$RUNNER_TEMP/0b012feb-aea9-4e90-b172-39986cb0f0f0.mobileprovision
-#
-#            echo -n "$PROVISIONING_PROFILE_NAME" | base64 --decode --output $PP_PATH
-#            mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-#            cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+      - name: Install Apple Certificate
+        uses: apple-actions/import-codesign-certs@v1
+        with:
+            p12-file-base64: ${{ secrets.TRUSTY_CAR }}
+            p12-password: ${{ secrets.TRUSTY_CAR_PSW }}
+
+      - name: Install the provisioning profile
+        run: |
+
+            PP_PATH=$RUNNER_TEMP/0b012feb-aea9-4e90-b172-39986cb0f0f0.mobileprovision
+
+            echo -n "$PROVISIONING_PROFILE_NAME" | base64 --decode --output $PP_PATH
+            mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+            cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
       - name: Install dependencies
         run: |
           /usr/local/bin/pod install
 
-#      - name: Build resolve Swift dependencies
-#        run: xcodebuild -resolvePackageDependencies -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -configuration Release
+      - name: Build resolve Swift dependencies
+        run: xcodebuild -resolvePackageDependencies -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -configuration Release
         
       - name: Archive
-        run: xcodebuild clean archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -destination 'generic/platform=iOS' -archivePath $ARCHIVE_NAME.xcarchive CODE_SIGN_STYLE=Automatic
-        
-#        xcodebuild archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -archivePath $ARCHIVE_NAME.xcarchive
+        run: xcodebuild archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -archivePath $ARCHIVE_NAME.xcarchive
 
       - name: Export IPA
         run: |
