--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,37 +13,39 @@ env:
     PROVISIONING_PROFILE_NAME: "${{ secrets.PROVISIONING_PROFILE_BASE64 }}"
 
 jobs:
-    build:
+  build:
     runs-on: macos-latest
+
     steps:
-        - name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v2
-        
-        - name: Install Apple Certificate
+
+      - name: Install Apple Certificate
         uses: apple-actions/import-codesign-certs@v1
         with:
             p12-file-base64: ${{ secrets.TRUSTY_CAR }}
             p12-password: ${{ secrets.TRUSTY_CAR_PSW }}
-                
-        - name: Install dependencies
+
+      - name: Install dependencies
         run: |
           /usr/local/bin/pod install
+#        export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890 如果有需要key把这句放到install前面
+
+      - name: Build resolve Swift dependencies
+        run: xcodebuild -resolvePackageDependencies -workspace $XCWORKSPACE_NAME.xcworkspace -scheme "$PROJSCHEME_NAME" -configuration Debug
         
-        - name: Build resolve Swift dependencies
-        run: xcodebuild -resolvePackageDependencies -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -configuration Release
-        
-        - name: Archive
-        run: xcodebuild archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme $PROJSCHEME_NAME -archivePath $ARCHIVE_NAME.xcarchive
-        
-        - name: Export IPA
+      - name: Archive
+        run: xcodebuild archive -workspace $XCWORKSPACE_NAME.xcworkspace -scheme "$PROJSCHEME_NAME" -archivePath $ARCHIVE_NAME.xcarchive
+
+      - name: Export IPA
         run: |
-          xcodebuild -exportArchive -archivePath $ARCHIVE_NAME.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath "~/Downloads/$PROJSCHEME_NAME"
+          xcodebuild -exportArchive -archivePath $ARCHIVE_NAME.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath "~/Downloads/$ARCHIVE_NAME"
 #          PROVISIONING_PROFILE=${{ secrets.PROVISIONING_PROFILE_BASE64 }}
-    
-        - name: Upload to App Store
+
+      - name: Upload to App Store
         run: |
-            xcrun altool --upload-app -f "~/Downloads/$PROJSCHEME_NAME/$PRODUCT_NAME.ipa" -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
-        
+            xcrun altool --upload-app -f "~/Downloads/$ARCHIVE_NAME/$XCWORKSPACE_NAME.ipa" -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
+            
         - name: install plistbuddy
         run: |
             brew install --cask plistbuddy
